# resume_gap_analyser

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
lpg/: __init__.py  exception_routes.py  exceptions.py  log.py  routes.py  s3_utils.py  utils.py
lpg/DB/: model.py
lpg/controller/: auth.py  document.py  generate.py
lpg/static/styles/: dashboard.css  index.css  my_documents.css  navbar.css  signin.css  upload.css  verify_gap.css
lpg/templates/: dashboard.html  documents.html  index.html  navbar.html  signin.html  signup.html  upload.html  verify_gap.html
migrations/versions/: 3dd760bfca39_.py  7e39777f002d_.py  b39b9a25c74a_added_local_column_under_documents_table.py  d8f951509de1_added_statistic_table.py  ead896ea8b9c_add_gap_analysis_results_table.py
